utoipa-gen/tests/snapshots/path_derive__derive_path_params_intoparams.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "description": "Foo database id.",
    "example": 1,
    "in": "query",
    "name": "id",
    "required": true,
    "schema": {
      "format": "int64",
      "type": "integer"
    },
    "style": "form"
  },
  {
    "description": "Datetime since foo is updated.",
    "example": "2020-04-12T10:23:00Z",
    "in": "query",
    "name": "since",
    "required": false,
    "schema": {
      "type": "string"
    },
    "style": "form"
  },
  {
    "description": "A Foo item ref.",
    "in": "query",
    "name": "foo_ref",
    "required": true,
    "schema": {
      "$ref": "#/components/schemas/Foo"
    },
    "style": "form"
  },
  {
    "description": "A Foo item inline.",
    "in": "query",
    "name": "foo_inline",
    "required": true,
    "schema": {
      "default": "foo1",
      "enum": [
        "foo1",
        "foo2"
      ],
      "example": "foo1",
      "type": "string"
    },
    "style": "form"
  },
  {
    "description": "An optional Foo item inline.",
    "in": "query",
    "name": "foo_inline_option",
    "required": false,
    "schema": {
      "default": "foo1",
      "enum": [
        "foo1",
        "foo2"
      ],
      "example": "foo1",
      "type": "string"
    },
    "style": "form"
  },
  {
    "description": "A vector of Foo item inline.",
    "in": "query",
    "name": "foo_inline_vec",
    "required": true,
    "schema": {
      "items": {
        "default": "foo1",
        "enum": [
          "foo1",
          "foo2"
        ],
        "example": "foo1",
        "type": "string"
      },
      "type": "array"
    },
    "style": "form"
  },
  {
    "description": "Id of some items to list",
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "format": "int64",
      "type": "integer"
    }
  }
]
