utoipa-gen/tests/snapshots/path_derive__derive_path_test_collect_request_body.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&schemas"
snapshot_kind: text
---
{
  "Account": {
    "properties": {
      "id": {
        "format": "int32",
        "type": "integer"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  },
  "Person": {
    "properties": {
      "account": {
        "$ref": "#/components/schemas/Account"
      },
      "name": {
        "type": "string"
      }
    },
    "required": [
      "name",
      "account"
    ],
    "type": "object"
  }
}
